rename responsible to supervisor
